--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>About James</title>
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     rel="stylesheet"
@@ -19,28 +19,36 @@
     <main>
       <img src="IMG_3720.jpeg" alt="James sitting in chair">
       <hr>
-      <h1>
+      <h2>
         Hello!  My name is James Murphy.
-      </h1>
+      </h2>
         <p>
           I am an aspiring software developer living in Greenville, SC.  Currently, I am working as a Personal Trainer.  If you are interested in hiring a software developer, or getting ripped for that upcoming vacation, feel free to <a href="#contact">Contact me!</a>
         </p>
-      <h2>About me</h2>
+<!-- Write a section about me -->
+      <h3>About me</h3>
         <p>
           Currently, I am enrolled at Thinkful to become a software engineer.  The more I learn about coding and developing, the more I enjoy it.  It combines technicality, patience, and aesthetics to create great software.  I look forward to learning more, as I want to continue to create more detailed projects.  Also, I look forward to working with other developers.  The more minds you have on a project, the more creativity is brought to the table, making for some exciting results.
         </p>
+<!-- Ordered list about hobbies -->
         <p>
-          When I am not coding, I enjoy playing a round of golf, or grabing some drinks with freinds.  If I'm not doing either of those, you can probably find me playing xbox.
+          My favorite hobbies when I am not coding include:
         </p>
-      <h2 id="contact">
+        <ol>
+          <li>Golf</li>
+          <li>Guitar</li>
+          <li>Xbox</li>
+        </ol>
+<!-- section to contact me -->
+      <h3 id="contact">
         Contact Me
-      </h2>
+      </h3>
       <ul>
         <li>
-          <a href="https://github.com/jamesIVdeveloper">GitHub</a>
+          <a href="https://github.com/jamesIVdeveloper" target="_blank">GitHub</a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/james-murphy-42331180/">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/james-murphy-42331180/" target="_blank">LinkedIn</a>
         </li>
       </ul>        
     </main>
